all fonctionaly related to user

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,13 @@
 @tailwind utilities;
 
 .section {
-  padding-block: 25px;
+  padding-block: 100px;
+}
+
+body {
+  background-color: rgb(241, 245, 241);
+}
+
+.height {
+  height: calc(100vh - 150px);
 }
